SVN_SILENT made messages (.desktop file)
svn path=/trunk/playground/network/kopete/plugins/sharemydesktop/; revision=1018935

--- a/kopete_sharemydesktop.desktop
+++ b/kopete_sharemydesktop.desktop
@@ -14,4 +14,10 @@ X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-License=LGPL
 X-KDE-PluginInfo-EnabledByDefault=true
 Name=Share My Desktop
+Name[sv]=Dela mitt skrivbord
+Name[uk]=Відкрити мою стільницю
+Name[x-test]=xxShare My Desktopxx
 Comment=Share your desktop with your instant messaging buddies
+Comment[sv]=Dela ditt skrivbord med direktmeddelandekompisar
+Comment[uk]=Відкрити вашу стільницю для ваших співрозмовників у службі обміну повідомленнями
+Comment[x-test]=xxShare your desktop with your instant messaging buddiesxx
