SVN_SILENT made messages (.desktop file)
svn path=/trunk/playground/network/kopete/plugins/sharemydesktop/; revision=1019335

--- a/kopete_sharemydesktop.desktop
+++ b/kopete_sharemydesktop.desktop
@@ -14,10 +14,14 @@ X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-License=LGPL
 X-KDE-PluginInfo-EnabledByDefault=true
 Name=Share My Desktop
+Name[pt]=Partilhar o Meu Ecrã
+Name[pt_BR]=Partilhar o Meu Ecrã
 Name[sv]=Dela mitt skrivbord
 Name[uk]=Відкрити мою стільницю
 Name[x-test]=xxShare My Desktopxx
 Comment=Share your desktop with your instant messaging buddies
+Comment[pt]=Partilhe o seu ambiente de trabalho com os seus amigos das mensagens instantâneas
+Comment[pt_BR]=Partilhe o seu ambiente de trabalho com os seus amigos das mensagens instantâneas
 Comment[sv]=Dela ditt skrivbord med direktmeddelandekompisar
 Comment[uk]=Відкрити вашу стільницю для ваших співрозмовників у службі обміну повідомленнями
 Comment[x-test]=xxShare your desktop with your instant messaging buddiesxx
