Use non-deprecated macros for the plugin factory.
svn path=/trunk/playground/network/kopete/plugins/sharemydesktop/; revision=1024477

--- a/kopete_sharemydesktop.desktop
+++ b/kopete_sharemydesktop.desktop
@@ -5,7 +5,7 @@ Icon=krfb
 X-KDE-ServiceTypes=Kopete/Plugin
 X-KDE-Library=kopete_sharemydesktop
 X-KDE-PluginInfo-Author=George Goldberg
-X-KDE-PluginInfo-Email=george.goldberg@collabora.co.uk
+X-KDE-PluginInfo-Email=grundleborg@googlemail.com
 X-KDE-PluginInfo-Name=kopete_sharemydesktop
 X-KDE-PluginInfo-Version=0.1.0
 X-KDE-PluginInfo-Website=http://kopete.kde.org
