--- a/kopete_sharemydesktop.desktop
+++ b/kopete_sharemydesktop.desktop
@@ -15,6 +15,7 @@ X-KDE-PluginInfo-License=LGPL
 X-KDE-PluginInfo-EnabledByDefault=true
 Name=Share My Desktop
 Name[pt]=Partilhar o Meu Ecrã
+Name[ro]=Partajează biroul
 Name[sv]=Dela mitt skrivbord
 Name[tr]=Masaüstümü Paylaş
 Name[uk]=Відкрити мою стільницю
